Bug fixes, dark mode progression, fixed conflicts, dark mode slider works on all pages

--- a/my-library-app/src/App.css
+++ b/my-library-app/src/App.css
@@ -148,7 +148,6 @@
   z-index: -2;
 }
 
-/* Pages (middle block) */
 .pages {
   margin-top: 4px;
   background: var(--text-color);
@@ -298,10 +297,10 @@
 }
 
 .body {
-    background-color: #9d3cff; /* A shade of purple, adjust as needed */
-    margin: 0; /* Important: removes default browser margins */
+    background-color: var(--left-gradient); 
+    margin: 0; 
     padding: 0;
-    font-family: Arial, sans-serif; /* Good practice to set a default font */
+    font-family: Arial, sans-serif; 
 }
 
 
@@ -309,9 +308,11 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    margin-top: 120px;
+    margin-top: 30px;
     width: 600px;
-    background: #fff;
+    border-radius: 10px;
+    opacity: 80%;
+    background: var(--left-gradient);
     padding-bottom: 30px;
 }
 
@@ -325,7 +326,7 @@
 }
 
 .text{
-    color: #3c009d;
+    color: var(--text-color);
     font-size: 48px;
     font-weight: 700;
 }
@@ -333,7 +334,7 @@
 .underline{
     width: 61px;
     height: 6px;
-    background: #3c009d;
+    background: var(--text-color);
     border-radius: 9px;
 }
 
@@ -376,7 +377,7 @@
 }
 
 .forgot-password span{
-    color: #4c00b4;
+    color: #5468a4;
     cursor: pointer;
 }
 
@@ -391,8 +392,8 @@
     align-items: center;
     width: 220px;
     height: 59px;
-    color: #fff;
-    background: #4c00b4;
+    color: var(--text-color);
+    background: var(--bg-color);
     border-radius: 50px;
     font-size: 19px;
     font-weight: 700;
@@ -400,25 +401,25 @@
 }
 
 .gray{
-    background: #eaeaea;
-    color: #676767;
+    background: var(--sceondary-accent);
+    color: var(--hover-color);
 }
 
-/* Switch styling */
 .switch {
   position: relative;
   display: inline-block;
   width: 50px;
-  height: 26px;
-  margin-right: 10px;
+  height: 28px;
 }
 
+/* Hide default checkbox */
 .switch input {
   opacity: 0;
   width: 0;
   height: 0;
 }
 
+/* The slider */
 .slider {
   position: absolute;
   cursor: pointer;
@@ -426,29 +427,31 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: var(--border-color); /* gray in light mode */
   transition: 0.4s;
-  border-radius: 26px;
+  border-radius: 28px;
 }
 
+/* The circle */
 .slider:before {
   position: absolute;
   content: "";
-  height: 20px;
-  width: 20px;
+  height: 22px;
+  width: 22px;
   left: 3px;
   bottom: 3px;
-  background-color: white;
+  background-color: var(--bg-color); /* circle color */
   transition: 0.4s;
   border-radius: 50%;
 }
 
+/* Checked state */
 input:checked + .slider {
-  background-color: #2b4573;
+  background-color: var(--shadow-color); /* color when switched */
 }
 
 input:checked + .slider:before {
-  transform: translateX(24px);
+  transform: translateX(22px);
 }
 
 .dark-mode-toggle {
